--- a/src/MoneyManager.Web/wwwroot/index.html
+++ b/src/MoneyManager.Web/wwwroot/index.html
@@ -38,6 +38,13 @@
         <a class="dismiss">×</a>
     </div>
 
+    <!-- Configuration - API URL injected at runtime -->
+    <script>
+        window.blazorConfig = {
+            apiUrl: '__API_URL__'
+        };
+    </script>
+
     <!-- Bootstrap 5 JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     
