Ajustes de layout, melhorias em filtros

--- a/src/MoneyManager.Web/wwwroot/index.html
+++ b/src/MoneyManager.Web/wwwroot/index.html
@@ -57,6 +57,9 @@
     
     <!-- Badge Contrast Helper -->
     <script src="js/badge-contrast.js"></script>
+
+    <!-- Navbar (mobile) auto-collapse on navigation -->
+    <script src="js/navbar.js"></script>
     
     <!-- Blazor WebAssembly -->
     <script src="_framework/blazor.webassembly.js"></script>
