mais problemas de encoding, mais correções de encoding

--- a/src/MoneyManager.Web/wwwroot/index.html
+++ b/src/MoneyManager.Web/wwwroot/index.html
@@ -28,14 +28,14 @@
         <div class="loading-container">
             <div class="spinner"></div>
             <h3 class="mt-3">MoneyManager</h3>
-            <p class="text-muted">Carregando aplicação...</p>
+            <p class="text-muted">Carregando aplicaÃƒÆ’Ã‚Â§ÃƒÆ’Ã‚Â£o...</p>
         </div>
     </div>
 
     <div id="blazor-error-ui">
-        Uma exceção não tratada ocorreu. Veja o navegador dev tools para detalhes.
+        Uma exceÃƒÆ’Ã‚Â§ÃƒÆ’Ã‚Â£o nÃƒÆ’Ã‚Â£o tratada ocorreu. Veja o navegador dev tools para detalhes.
         <a href="" class="reload">Recarregar</a>
-        <a class="dismiss">×</a>
+        <a class="dismiss">ÃƒÆ’Ã¢â‚¬â€</a>
     </div>
 
     <!-- Configuration - API URL injected at runtime -->
