--- a/src/MoneyManager.Web/wwwroot/test.html
+++ b/src/MoneyManager.Web/wwwroot/test.html
@@ -4,7 +4,7 @@
     <title>Test</title>
 </head>
 <body>
-    <h1>Se você está vendo isto, o servidor de arquivos estáticos está funcionando!</h1>
+    <h1>Se vocÃª estÃ¡ vendo isto, o servidor de arquivos estÃ¡ticos estÃ¡ funcionando!</h1>
     <p><a href="/">Voltar para home</a></p>
 </body>
 </html>
