--- a/src/MoneyManager.Web/wwwroot/index.html
+++ b/src/MoneyManager.Web/wwwroot/index.html
@@ -28,14 +28,14 @@
         <div class="loading-container">
             <div class="spinner"></div>
             <h3 class="mt-3">MoneyManager</h3>
-            <p class="text-muted">Carregando aplicação...</p>
+            <p class="text-muted" id="loading-text">Carregando aplicaÃ§Ã£o...</p>
         </div>
     </div>
 
     <div id="blazor-error-ui">
-        Uma exceção não tratada ocorreu. Veja o navegador dev tools para detalhes.
+        Uma exceÃ§Ã£o nÃ£o tratada ocorreu. Veja o navegador dev tools para detalhes.
         <a href="" class="reload">Recarregar</a>
-        <a class="dismiss">×</a>
+        <a class="dismiss">âœ–</a>
     </div>
 
     <!-- Configuration - API URL injected at runtime -->
@@ -45,6 +45,9 @@
         };
     </script>
 
+    <!-- Loading Screen Localization (runs before Blazor) -->
+    <script src="js/loading-localization.js"></script>
+    
     <!-- Bootstrap 5 JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     
