--- a/src/MoneyManager.Web/wwwroot/index.html
+++ b/src/MoneyManager.Web/wwwroot/index.html
@@ -28,14 +28,14 @@
         <div class="loading-container">
             <div class="spinner"></div>
             <h3 class="mt-3">MoneyManager</h3>
-            <p class="text-muted" id="loading-text">Carregando aplicação...</p>
+            <p class="text-muted" id="loading-text">Carregando aplica&#231;&#227;o...</p>
         </div>
     </div>
 
     <div id="blazor-error-ui">
-        Uma exceção não tratada ocorreu. Veja o navegador dev tools para detalhes.
+        Uma exce&#231;&#227;o n&#227;o tratada ocorreu. Veja o navegador dev tools para detalhes.
         <a href="" class="reload">Recarregar</a>
-        <a class="dismiss">✖</a>
+        <a class="dismiss">&#10006;</a>
     </div>
 
     <!-- Configuration - API URL injected at runtime -->
