Adição de rework para investimentos com integração a APIs de investimento para consulta de ativos e atualização de valores

--- a/src/MoneyManager.Web/wwwroot/index.html
+++ b/src/MoneyManager.Web/wwwroot/index.html
@@ -54,6 +54,7 @@
     <!-- Chart.js -->
     <script src="https://cdn.jsdelivr.net/npm/chart.js@4.4.0/dist/chart.umd.min.js"></script>
     <script src="js/charts.js"></script>
+    <script src="js/investmentCharts.js"></script>
     
     <!-- Theme Manager -->
     <script src="js/theme-manager.js"></script>
